--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 <body>
     <canvas id="canvas1"></canvas>
 
+    <!-- Characters -->
+    <img id="player" src="assets/tsuberi.png">
+    <img id="roei" src="assets/tsuberi.png">
+    <img id="yotam" src="assets/tsuberi.png">
+    <img id="liad" src="assets/tsuberi.png">
+
+    <!-- props -->
+
+    <!-- Environment -->
+    <img id="layer1" src="assets/layer1.png">
+    <img id="layer2" src="assets/layer2.png">
+    <img id="layer3" src="assets/layer3.png">
+    <img id="layer4" src="assets/layer4.png">
+    <img id="layer5" src="assets/adjusted_crack_133_left.png">
+
     <script src="script.js"></script>
 </body>
 </html>
