--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Game</title>
+    <title>Character Selection</title>
     <link rel="stylesheet" href="style.css">
-</head> 
+</head>
 <body>
-    <canvas id="canvas1"></canvas>
 
     <!-- Characters -->
     <img id="player" src="assets/tsuberi.png">
     <img id="roei" src="assets/tsuberi.png">
     <img id="yotam" src="assets/tsuberi.png">
     <img id="liad" src="assets/tsuberi.png">
+    <img id="tsuberi" src="assets/tsuberiFull.png">
 
     <!-- props -->
+    <img id="keva" src="assets/keva.png"> 
+    <img id="sonic" src="assets/sonic.png"> 
+    <img id="ptor" src="assets/ptor.jpeg"> 
 
     <!-- Environment -->
     <img id="layer1" src="assets/layer1.png">
@@ -24,6 +28,35 @@
     <img id="layer4" src="assets/layer4.png">
     <img id="layer5" src="assets/adjusted_crack_133_left.png">
 
-    <script src="script.js"></script>
+    <h1>SELECT YOUR CHARACTERS</h1>
+    
+    <div class="character-container">
+        <div class="character" onclick="selectCharacter(this, 'player1')">
+            <img src="assets/tsuberi.png" alt="Player 1">
+            <button class="select-btn">Select</button>
+        </div>
+        <div class="character" onclick="selectCharacter(this, 'player2')">
+            <img src="assets/tsuberi.png" alt="Player 2">
+            <button class="select-btn">Select</button>
+        </div>
+        <div class="character" onclick="selectCharacter(this, 'player3')">
+            <img src="assets/tsuberi.png" alt="Player 3">
+            <button class="select-btn">Select</button>
+        </div>
+        <div class="character" onclick="selectCharacter(this, 'player4')">
+            <img src="assets/tsuberi.png" alt="Player 4">
+            <button class="select-btn">Select</button>
+        </div>
+    </div>
+    
+
+    <div class="buttons">
+        <button id="startGame" onclick="startAnim()">Start Game</button>
+        <button onclick="showInstructions()">How to Play</button>
+    </div>
+
+    <canvas id="canvas1" style="display: none;"></canvas>
+
+    <script type="module" src="script.js"></script>
 </body>
 </html>
