Final commit without all pictures or animations or sounds

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <img id="player" src="assets/tsuberi.png">
     <img id="roei" src="assets/tsuberi.png">
     <img id="yotam" src="assets/tsuberi.png">
-    <img id="liad" src="assets/tsuberi.png">
+    <img id="alex" src="assets/spritesheets/AlexWalk.png">
+    <img id="alexFly" src="assets/AlexFly.png">
     <img id="tsuberi" src="assets/tsuberiFull.png">
 
     <!-- props -->
