commit 2 main characters 2 side characters

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <img id="alex" src="assets/spritesheets/AlexWalk.png">
     <img id="alexFly" src="assets/AlexFly.png">
     <img id="tsuberi" src="assets/tsuberiFull.png">
+    <img id="eli" src="assets/spritesheets/EliWalkAttack.png">
+    <img id="shai" src="assets/spritesheets/shaiWalkAttackUlt.png">
 
     <!-- props -->
     <img id="keva" src="assets/keva.png"> 
     <img id="sonic" src="assets/sonic.png"> 
     <img id="ptor" src="assets/ptor.jpeg"> 
+    <img id="sword" src="assets/sword.png"> 
+    <img id="shatz" src="assets/shatz.png"> 
 
     <!-- Environment -->
     <img id="layer1" src="assets/layer1.png">
@@ -33,11 +37,11 @@
     
     <div class="character-container">
         <div class="character" onclick="selectCharacter(this, 'player1')">
-            <img src="assets/tsuberi.png" alt="Player 1">
+            <img src="assets/Eli.png" alt="Player 1">
             <button class="select-btn">Select</button>
         </div>
         <div class="character" onclick="selectCharacter(this, 'player2')">
-            <img src="assets/tsuberi.png" alt="Player 2">
+            <img src="assets/Shai2.png" alt="Player 2">
             <button class="select-btn">Select</button>
         </div>
         <div class="character" onclick="selectCharacter(this, 'player3')">
