final commit with tsuberi keva hit marker and no style in html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <button class="close-btn" onclick="closeInstructions()">×</button>
 
             <!-- Title Section -->
-            <h1 style="text-align: center;">צוברי נגד העולם</h1>
+            <h1 class = "rtlClass">צוברי נגד העולם</h1>
 
             <!-- Section 1: Character Selection -->
             <h2>בחירת שחקנים</h2>
