Switch html to Hebrew (start game, exc...)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img id="layer4" src="assets/Environment/layer4.png">
     <img id="layer5" src="assets/Environment/adjusted_crack_133_left.png">
 
-    <h1 class="title">SELECT YOUR<br>CHARACTERS</h1>
+    <h1 class="title">בחר את<br>הדמות שלך (עבד לנצח)</h1>
     
     <div class="character-container">
         <div class="character" onclick="selectCharacter(this, 'Eli')">
@@ -67,8 +67,8 @@
     </div>
 
     <div class="buttons">
-        <button id="startGame" onclick = "startAnim()">Start Game</button>
-        <button onclick="showInstructions()">How to Play</button>
+        <button id="startGame" onclick = "startAnim()">התחל משחק</button>
+        <button onclick="showInstructions()">הוראות</button>
     </div>
 
     <!-- Instruction Modal -->
