--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             <br>
             <h3>מקשים בסיסיים:</h3>
             <ul>
-                <li>שחקן 1: זז למעלה (W), זז למטה (S), לירות (E)</li>
-                <li>שחקן 2: זז למעלה (חץ למעלה), זז למטה (חץ למטה), לירות (ברווח)</li>
+                <li>שחקן 1: זז למעלה (W / Controller Joystick), זז למטה (S / Controller Joystick), לירות (E / RT)</li>
+                <li>שחקן 2: זז למעלה (חץ למעלה / Controller Joystick), זז למטה (חץ למטה / Controller Joystick), לירות (ברווח / RT)</li>
                 <li>לעצור את המשחק או להמשיכו: "Esc"</li>
 
             </ul>
@@ -177,7 +177,7 @@
             <img src="assets/Instructions And Events/healthIndicator.png" alt="Health indicator">
 
             <h3>אירועים מיוחדים</h3>
-            <p>כל 20 שניות מתחיל אירוע מיוחד. גבול המסך מואר בכחול. השחקן הראשון שלחץ על הכפתור שלו מפעיל את האירוע על השחקן היריב (השני). הכפתור של שחקן 1 הוא "G", והכפתור של שחקן 2 הוא "H".</p>
+            <p>כל 20 שניות מתחיל אירוע מיוחד. גבול המסך מואר בכחול. השחקן הראשון שלחץ על הכפתור שלו מפעיל את האירוע על השחקן היריב (השני). הכפתור של שחקן 1 הוא "G / X (Xbox Controller)", והכפתור של שחקן 2 הוא "H/ X (Xbox Controller)".</p>
             <br>
 
             <h4>אירוע ראשון: טנק צוברי</h4>
